# uRpiPicoTemplate

./: CMakeLists.txt  README.md  build.sh  pico_toolchain.cmake
sources/app/: CMakeLists.txt
sources/app/src/: main.cpp
sources/libs/uart_access/: CMakeLists.txt
sources/libs/uart_access/src/: uart_access.cpp
